# TraitorSim

./: .crabbox.yaml  .env.example  .gitignore  AGENTS.md  API-CONTRACT.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile.agent  Dockerfile.dind-orchestrator  Dockerfile.game-engine  MCP_TOOLS_GUIDE.md  README.md  README_CONTAINERIZED.md  TRAITORSIM_UI_UX_RESEARCH.md  WORLD_BIBLE.md  agent-operability.toml  architectural_spec.md  deep_research_agent_ideation.md  demo_game_state.py  docker-compose.orchestrator.yml  docker-compose.yml  docker-compose.yml.backup  orchestrator-entrypoint.sh  pyproject.toml  quick_game_state.py  run.sh  run_containerized.sh  run_dind.sh
.agent-operability/: README.md  feedback-log.md  manifest.json
assets/: AUDIO_MANIFEST.md
docs/: AGENT_PROTOCOL.md  CASTLE-BROADCAST.md  CONTAINERIZATION_DESIGN.md  DEEPGRAM_STT_CLIENT.md  DEPLOY-API-SHIM.md  DEVOPS_LESSONS.md  DOCKER_GAME_RUNNER.md  EPISODE_PIPELINE_PRD.md  GEMINI_INTEGRATION_GUIDE.md  LIVE-PIE-COORDINATION.md  PERSONA_GENERATION_LESSONS.md  README_DIND.md  VOICE_CLIENTS_COMPARISON.md  VOICE_INTEGRATION_DESIGN.md  VOICE_MODULE.md  agent-workflow.md  commands.md  conventions.md  e2e.md  end-of-shift-validation.md  false-confidence-test-audit.md  implementation-notes-api-shim.md  night-shift.md  performance.md  periodic-sweeps.md  review.md  testing.md  visual-regression.md
examples/: test_deepgram_client.py
reports/: .gitkeep
research/: HITL_Voice_Interfaces_Research.md
scripts/: batch_convert_logs.py  batch_deep_research.py  deep_analysis_gemini.py  extract_training_data.py  (+13 more)
(+246 files in other folders)
